Desenhar os pins agora está sendo executado sempre que os informações do model travels muda.

--- a/app/views/home-auth.html
+++ b/app/views/home-auth.html
@@ -19,7 +19,7 @@
 	HOME AUTH
 
     {{travel}}
-	<draw-map data-map="container-map" data-map-opt="options" data-obj="dataList" data-id-combo="mode" data-id-pannel="directions-panel" data-r="route">
+	<draw-map data-map="container-map" data-map-opt="options" data-obj="dataList" data-id-combo="mode" data-id-pannel="directions-panel" data-r="route" data-draw-list-pin="drawListPin()">
         <map-travel data-obj="dataList" data-tr="travel" data-new-travel="newTravel()" data-edit-travel="editTravel(date)" data-delete-travel="deleteTravel()" data-sub-new-travel="submitNewTravel(date)" data-sub-edit-travel="submitEditTravel(date)"></map-travel>
     </draw-map>
 
