--- a/app/views/home-auth.html
+++ b/app/views/home-auth.html
@@ -19,8 +19,8 @@
 	HOME AUTH
 
     {{travel}}
-	<draw-map data-map="container-map" data-map-opt="options" data-obj="dataList" data-id-combo="mode" data-id-pannel="directions-panel" data-r="route" data-draw-list-pin="drawListPin()">
-        <map-travel data-obj="dataList" data-tr="travel" data-new-travel="newTravel()" data-edit-travel="editTravel(date)" data-delete-travel="deleteTravel()" data-sub-new-travel="submitNewTravel(date)" data-sub-edit-travel="submitEditTravel(date)"></map-travel>
+	<draw-map data-map="container-map" data-map-opt="mapOptions" data-obj="dataList" data-id-combo="mode" data-id-pannel="directions-panel" data-r="route" data-draw-list-pin="drawListPin()">
+        <map-travel data-obj="dataList" data-tr="travel" data-new-travel="newTravel()" data-edit-travel="editTravel(date)" data-delete-travel="deleteTravel()" data-sub-new-travel="submitNewTravel(date)" data-sub-edit-travel="submitEditTravel(date)" data-sub-edit-l-travel="submitEditLastTravel(lastTravel)"></map-travel>
     </draw-map>
 
     <div id="directions-panel"></div>
