Várias melhorias no código e $watch implementado para algumas tarefas.

--- a/app/views/home-auth.html
+++ b/app/views/home-auth.html
@@ -19,7 +19,7 @@
 	HOME AUTH
 
     {{travel}}
-	<draw-map data-map="container-map" data-map-opt="mapOptions" data-obj="dataList" data-id-combo="mode" data-id-pannel="directions-panel" data-r="route" data-draw-list-pin="drawListPin()">
+	<draw-map data-map="container-map" data-map-opt="mapOptions" data-obj="dataList" data-show-m="showMap" data-id-combo="mode" data-id-pannel="directions-panel" data-r="route">
         <map-travel data-obj="dataList" data-tr="travel" data-new-travel="newTravel()" data-edit-travel="editTravel(date)" data-delete-travel="deleteTravel()" data-sub-new-travel="submitNewTravel(date)" data-sub-edit-travel="submitEditTravel(date)" data-sub-edit-l-travel="submitEditLastTravel(lastTravel)"></map-travel>
     </draw-map>
 
