Só deixa remover uma travel se houver mais de uma; Adicionado o tamanho da imagem de perfil do facebook.

--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -1,5 +1,5 @@
 <!-- <img src="https://graph.facebook.com/100002807237878/picture?type=large"> -->
-<img src="https://graph.facebook.com/100002807237878/picture?type=normal">
+<img src="https://graph.facebook.com/100002807237878/picture?type=normal&width=20&height=20">
 <!-- <img src="https://graph.facebook.com/100002807237878/picture?type=small"> -->
 <!-- <img src="https://graph.facebook.com/100002807237878/picture?type=square"> -->
 
